--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,14 @@
-dist
-dist-*
-cabal-dev
-*.o
-*.hi
-*.hie
-*.chi
-*.chs.h
-*.dyn_o
-*.dyn_hi
-.hpc
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-*.prof
+.stack-work/
+.vscode/
+haddock/
+dist-newstyle/
+dist-docs.*/
+*~
 *.aux
 *.hp
-*.eventlog
-.stack-work/
-cabal.project.local
-cabal.project.local~
-.HTF/
-.ghc.environment.*
+*.prof
+*.ps
+*.ser
+*.dylib
+cabal.project.local*
+
