change import format for KPath and Main

--- a/bus-map-haskell.cabal
+++ b/bus-map-haskell.cabal
@@ -33,6 +33,7 @@ executable app
   build-depends:
       array
     , base >=4.7 && <5
+    , containers
     , data-default
     , lens
     , monomer
