--- a/package.yaml
+++ b/package.yaml
@@ -20,11 +20,11 @@ dependencies:
   - base >= 4.7 && < 5
   - array
   - containers
-  - data-default
-  - lens
-  - monomer
-  - text
-  - text-show
+  # - data-default
+  # - lens
+  # - monomer
+  # - text
+  # - text-show
 
 executables:
   app:
@@ -36,3 +36,5 @@ executables:
     ghc-options:
     - -fwarn-incomplete-patterns
     - -threaded
+    # - -fghci-sandbox
+    # - -O2
