--- a/bus-map-haskell.cabal
+++ b/bus-map-haskell.cabal
@@ -19,6 +19,7 @@ extra-source-files:
 executable app
   main-is: Main.hs
   other-modules:
+      CLI
       KPath
       Structures
       Paths_bus_map_haskell
@@ -33,4 +34,5 @@ executable app
       array
     , base >=4.7 && <5
     , containers
+    , mtl
   default-language: Haskell2010
